--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "autoprefixer": "^10.0.4",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "postcss": "^8.1.13"
