add js minifier task

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "postcss": "^8.1.13"
   },
   "dependencies": {}
