--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "autoprefixer": "^10.0.4",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
